--- a/package.json
+++ b/package.json
@@ -20,6 +20,42 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@headlessui/react": "^1.7.13",
+    "@hookform/resolvers": "^3.1.0",
+    "@phosphor-icons/react": "^2.0.8",
+    "@react-google-maps/api": "^2.18.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.3.2",
+    "clsx": "^1.2.1",
+    "dexie": "^3.2.3",
+    "dexie-react-hooks": "^1.1.3",
+    "framer-motion": "^10.10.0",
+    "next-pwa": "^5.6.0",
+    "prop-types": "^15.8.1",
+    "react-hook-form": "^7.43.9",
+    "react-toastify": "^9.1.1",
+    "remask": "^1.0.1",
+    "uuid": "^9.0.0",
+    "yup": "^1.0.2",
+    "zustand": "^4.3.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^13.2.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.10",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "tailwind-scrollbar": "^3.0.0",
+    "tailwindcss": "^3.3.1"
   }
 }
