--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,14 @@
       "~/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/components/system/Button/index.tsx",
+    "src/components/system/Confirm.tsx",
+    "src/context/Confirm.tsx"
+  ],
   "exclude": ["node_modules"]
 }
